--- a/signup.html
+++ b/signup.html
@@ -38,7 +38,7 @@
             text-align: center;
 
             position: relative;
-            top: 50px;
+            top: 200px;
             
         }
 
@@ -89,6 +89,15 @@
     <div class="signup-box">
         <p>Create Account</p>
         <form action="">
+
+
+            <label for="fname">First Name:</label>
+            <input type="fname" id="fname" name="fname" class="input-field"
+                   placeholder="Enter first name" required>
+
+            <label for="lname">Last Name:</label>
+            <input type="lname" id="lname" name="lname" class="input-field"
+                   placeholder="Enter last name" required>
 
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" class="input-field"
