--- a/parentportal.html
+++ b/parentportal.html
@@ -75,10 +75,18 @@
 
     <!--Buttons to other pages-->
     <p style="text-align: center;">
+
         <a href="chorelistmanage.html">Manage Chorelist</a>
 
         <!--add link later. not sure what uma will call the file yet-->
         <a href="">Manage Children</a>
+
+        <!--add link later. not sure what uma will call the file yet-->
+        <a href="">Manage Payments</a>
+
+        <!--add link later-->
+        <a href="">Approve Completions</a>
+
     </p>
     <h3>Children's Chores:</h3>
 
