added "add new chore" page

--- a/signup.html
+++ b/signup.html
@@ -88,34 +88,34 @@
 
     <div class="signup-box">
         <p>Create Account</p>
+        <!--for phase 4, add link to php page below-->
         <form action="">
 
 
             <label for="fname">First Name:</label>
-            <input type="fname" id="fname" name="fname" class="input-field"
+            <input type="text" id="fname" name="fname" class="input-field"
                    placeholder="Enter first name" required>
 
             <label for="lname">Last Name:</label>
-            <input type="lname" id="lname" name="lname" class="input-field"
+            <input type="text" id="lname" name="lname" class="input-field"
                    placeholder="Enter last name" required>
 
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email" class="input-field"
+            <input type="text" id="email" name="email" class="input-field"
                    placeholder="Enter email" required>
 
             <label for="username">Username:</label>
-            <input type="username" id="username" name="username" class="input-field"
+            <input type="text" id="username" name="username" class="input-field"
                    placeholder="Enter username" required>
 
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" class="input-field"
+            <input type="text" id="password" name="password" class="input-field"
                    placeholder="Enter password" required>
 
-            <button type="signup" class="signup-btn">Sign up</button>
+            <button type="submit" class="signup-btn">Sign up</button>
 
             <p style="font-size:10px;top:10px;"><a href="signin.html">Already have an account? Login!</a></p>
 
-            <!-- maybe add later buttons to choose whether parent or child account and other stuff -->
         </form>
     </div>
 
