--- a/addchore.html
+++ b/addchore.html
@@ -5,10 +5,12 @@
 
     <title>ChoreForce Login</title>
     <style>
+
         body {
             background-color: #CCE5FF;
         }
 
+        /*"ChoreForce" style*/
         h1 {
             font-size: 32px;
             font-weight: bold;
@@ -18,6 +20,7 @@
             color: #003366;
         }
 
+        /*subheading style*/
         h2 {
             font-size: 32px;
             color: #003366;
@@ -25,6 +28,7 @@
             text-align: center;
         }
 
+        /*form label style*/
         label {
             font-size: 24px;
             font-weight: bold;
@@ -32,12 +36,14 @@
             margin-left: 30px;
         }
 
+        /*form input boxes style*/
         input, textarea {
             margin-top: 10px;
             margin-left: 30px;
             font-size: 24px;
         }
 
+        /*form submit button style*/
         .addchore-btn {
             width: 25%;
             padding: 12px;
