--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,7 @@
 
     <title>ChoreForce Login</title>
     <style>
+        /*entire page style*/
         body {
             background-color: #CCE5FF;
 
@@ -18,6 +19,7 @@
             padding-bottom: 100px;
         }
 
+        /*"Choreforce" style*/
         h1 {
             font-size: 32px;
             font-weight: bold;
@@ -29,6 +31,7 @@
             color: #003366;
         }
 
+        /*white box around form style*/
         .signup-box {
             background: white;
 
@@ -42,6 +45,7 @@
             
         }
 
+        /*subheading style*/
         p {
             font-size: 24px;
             color: #003366;
@@ -50,6 +54,7 @@
             top: -10px;
         }
 
+        /*form label style*/
         .signup-box label {
             display: block;
             text-align: left;
@@ -57,6 +62,7 @@
             
         }
 
+        /*form input box style*/
         .input-field {
             width: 90%;
             padding: 10px;
@@ -69,6 +75,7 @@
             margin-bottom: 30px;
         }
 
+        /*signup button style*/
         .signup-btn {
             width: 100%;
             padding: 12px;
