--- a/parentportal.html
+++ b/parentportal.html
@@ -84,8 +84,7 @@
         <!--add link later. not sure what uma will call the file yet-->
         <a href="">Manage Payments</a>
 
-        <!--add link later-->
-        <a href="">Approve Completions</a>
+        <a href="acceptchore.html">Approve Completions</a>
 
     </p>
     <h3>Children's Chores:</h3>
