--- a/parentportal.html
+++ b/parentportal.html
@@ -79,10 +79,10 @@
         <a href="chorelistmanage.html">Manage Chorelist</a>
 
         <!--add link later. not sure what uma will call the file yet-->
-        <a href="">Manage Children</a>
+        <a href="childmanage.html">Manage Children</a>
 
         <!--add link later. not sure what uma will call the file yet-->
-        <a href="">Manage Payments</a>
+        <a href="moneymanage.html">Manage Payments</a>
 
         <a href="acceptchore.html">Approve Completions</a>
 
