--- a/chorelistmanage.html
+++ b/chorelistmanage.html
@@ -7,13 +7,29 @@
             background-color: #CCE5FF;
         }
 
-        /*"ChoreForce" style*/
-        h1 {
+        .navbar {
+            display: flex;
+            justify-content: space-between; /* pushes left + right apart */
+            align-items: center;
+            padding: 20px;
+            background-color: white;
+    	}
+
+        /* Nav bar items style */
+        .nav-items a {
+	        color: #003366;
+	        text-decoration: none;
+    	}
+
+        .nav-items {
+	        display: flex;
+	        gap: 20px;
+    	}
+
+        /*"ChoreForce" style in nav bar*/
+        .logo {
             font-size: 32px;
             font-weight: bold;
-            position: absolute;
-            top: 20px;
-            left: 30px;
             color: #003366;
         }
 
@@ -46,7 +62,7 @@
 
 
         /*buttons style*/
-        a {
+        .button {
             background-color: #7493db;
             color: white;
             padding: 14px 25px;
@@ -78,7 +94,14 @@
     </style>
 </head>
 <body>
-    <h1>ChoreForce</h1>
+    <nav>
+		<div class="navbar"> <!--nav bar-->
+	        <div class="logo">ChoreForce</div>
+	        <div class="nav-items">
+	            <a href="parentportal.html">My Portal</a>   <!--linked to parent portal for now, but this would change based on whether user is parent or child(childportal.html)-->
+		    </div>
+		</div>
+	</nav>
 
     <!--For phase 4 use php to add parent name here-->
     <h2>Chorelist Management</h2>
@@ -86,8 +109,8 @@
     <!--Buttons to other pages-->
     <p style="text-align: center;">
 
-        <a href="addchore.html">Add a chore</a>
-        <a href="editchore.html">Edit a chore</a>
+        <a class="button" href="addchore.html">Add a chore</a>
+        <a class="button" href="editchore.html">Edit a chore</a>
     </p>
 
     <!--for phase 4, add link to php page below-->
