--- a/signin.html
+++ b/signin.html
@@ -6,27 +6,41 @@
     <title>ChoreForce Login</title>
     <style>
         body {
-       
             background-color: #CCE5FF;
-
-            display: flex;
+            /* display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: flex-end;
 
             height: 100vh;
             margin: 0;
-            padding-bottom: 100px; 
+            padding-bottom: 100px;  */
         }
 
-        h1 {
+        .navbar {
+            display: flex;
+            justify-content: space-between; /* pushes left + right apart */
+            align-items: center;
+            padding: 20px;
+            background-color: white;
+            margin-bottom: 50px;
+    	}
+
+        /* Nav bar items style */
+        .nav-items a {
+	        color: #003366;
+	        text-decoration: none;
+    	}
+
+        .nav-items {
+	        display: flex;
+	        gap: 20px;
+    	}
+
+        /*"ChoreForce" style in nav bar*/
+        .logo {
             font-size: 32px;
             font-weight: bold;
-
-            position: absolute;
-            top: 20px;
-            left: 30px;
-
             color: #003366;
         }
 
@@ -36,11 +50,10 @@
             padding: 20px;
             border-radius: 10px;
             width: 350px;
-
+            margin-top: 200px;
             text-align: center;
-            position: relative;
-            top: -100px;
         }
+
         p {
             font-size: 24px;
             color: #003366;
@@ -82,10 +95,16 @@
     </style>
 </head>
 <body>
+    <nav>
+		<div class="navbar"> <!--nav bar-->
+	        <div class="logo">ChoreForce</div>
+	        <div class="nav-items">
+	            <a href="parentportal.html">My Portal</a>   <!--linked to parent portal for now, but this would change based on whether user is parent or child(childportal.html)-->
+		    </div>
+		</div>
+	</nav>
 
-    <h1>ChoreForce</h1>
-
-    <div class="login-box">
+    <div style="margin: auto;" class="login-box">
         <p>Login</p>
         <form action="">
             <label for="username">Username:</label>
