--- a/signup.html
+++ b/signup.html
@@ -7,28 +7,43 @@
         /*entire page style*/
         body {
             background-color: #CCE5FF;
-
-            display: flex;
+            /* display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: flex-end;
 
             height: 100vh;
             margin: 0;
-            padding-bottom: 100px;
+            padding-bottom: 100px; */
         }
 
-        /*"Choreforce" style*/
-        h1 {
+        .navbar {
+            display: flex;
+            justify-content: space-between; /* pushes left + right apart */
+            align-items: center;
+            padding: 20px;
+            background-color: white;
+            margin-bottom: 50px;
+    	}
+
+        /* Nav bar items style */
+        .nav-items a {
+	        color: #003366;
+	        text-decoration: none;
+    	}
+
+        .nav-items {
+	        display: flex;
+	        gap: 20px;
+    	}
+
+        /*"ChoreForce" style in nav bar*/
+        .logo {
             font-size: 32px;
             font-weight: bold;
-
-            position: absolute;
-            top: 20px;
-            left: 30px;
-
             color: #003366;
         }
+
 
         /*white box around form style*/
         .signup-box {
@@ -38,9 +53,8 @@
             border-radius: 10px;
             width: 350px;
             text-align: center;
-
-            position: relative;
             top: 200px;
+            margin: auto;
             
         }
 
@@ -89,8 +103,15 @@
     </style>
 </head>
 <body>
+    <nav>
+		<div class="navbar"> <!--nav bar-->
+	        <div class="logo">ChoreForce</div>
+	        <div class="nav-items">
+	            <a href="parentportal.html">My Portal</a>   <!--linked to parent portal for now, but this would change based on whether user is parent or child(childportal.html)-->
+		    </div>
+		</div>
+	</nav>
 
-    <h1>ChoreForce</h1>
 
     <div class="signup-box">
         <p>Create Account</p>
