--- a/acceptchore.html
+++ b/acceptchore.html
@@ -38,7 +38,7 @@
         h2 {
             font-size: 32px;
             font-weight: bold;
-            margin-top: 100px;
+            margin-top: 50px;
             text-align: center;
             color: #003366;
         }
@@ -48,7 +48,7 @@
             font-size: 24px;
             font-weight: bold;
             position: absolute;
-            top: 500px;
+            top: 550px;
             left: 100px;
             color: #4967ad;
         }
@@ -59,6 +59,7 @@
             font-weight: bold;
             color: #4967ad;
             margin-left: 30px;
+            
         }
 
         /*form input boxes style*/
@@ -104,8 +105,9 @@
 		</div>
 	</nav>
 
+    <h2>Accept Pending Chores</h2>
 
-    <form style="margin-top: 150px" action="">
+    <form style="margin-top: 50px;" action="">
         <label for="choreid">Which pending chore would you like to update status?</label> <br>
         <input type="text" id="choreid" name="choreid"
                placeholder="Enter Chore ID" required> <br> <br>
