--- a/landingage.html
+++ b/landingage.html
@@ -136,9 +136,9 @@
     <nav>
 		<div class="navbar"> <!--nav bar-->
 	        <div class="logo">ChoreForce</div>
-	        <div class="nav-items">
-	            <a href="parentportal.html">My Portal</a>   <!--linked to parent portal for now, but this would change based on whether user is parent or child(childportal.html)-->
-		    </div>
+            <div class="nav-items">
+                <!-- there was the portal link here but i removed it because users can't access portal until logged in-->
+            </div>
 		</div>
 	</nav>
 
