--- a/addchore.html
+++ b/addchore.html
@@ -104,6 +104,7 @@
 
         <label for="reward">Reward Amount:</label> <br>
         <input type="text" id="reward" name="reward" class="input-field"
+               pattern="[0-9]*" title="enter the dollar value do not include '$' or cents"
                placeholder="Enter the reward amount" required> <br> <br>
         <p style="text-align: center">
             <button type="submit" class="addchore-btn">Add Chore</button>
