--- a/childmanage.html
+++ b/childmanage.html
@@ -128,6 +128,7 @@
     <form style="margin-top: 50px" action="" id="accept">
         <label for="childid">Enter the id of the child you would like to delete:</label> <br>
         <input type="text" id="childid" name="childid"
+               pattern="[0-9]*" title="integers only"
                placeholder="Enter Child ID" required> <br> <br>
 
         <p>Are you sure you would like to delete this child?</p>
