--- a/chorelistmanage.html
+++ b/chorelistmanage.html
@@ -117,6 +117,7 @@
     <form style="margin-top: 50px" action="" id="accept">
         <label for="choreid">Enter the id of the chore you would like to delete:</label> <br>
         <input type="text" id="choreid" name="choreid"
+               pattern="[0-9]*" title="integers only"
                placeholder="Enter Chore ID" required> <br> <br>
 
         <p>Are you sure you would like to delete this chore?</p>
