--- a/parentportal.html
+++ b/parentportal.html
@@ -42,12 +42,19 @@
             color: #003366;
         }
 
+        p {
+            color:#4967ad;
+            font-size: 20px;
+            font-weight: bold;
+            text-align: center;
+        }
+
         /*chorelist subheading style*/
         h3 {
             font-size: 24px;
             font-weight: bold;
             position: absolute;
-            top: 300px;
+            top: 450px;
             left: 100px;
             color: #4967ad;
         }
@@ -75,6 +82,7 @@
             width: 85%;
             margin-left: auto;
             margin-right: auto;
+            margin-bottom: 50px;
             border-radius: 5px;
             font-size: 24px;
         }
@@ -93,8 +101,9 @@
 		</div>
 	</nav>
 
-    <!--For phase 4 use php to add parent name here-->
+    <!--For phase 4 use php to add parent name and ID here-->
     <h2>Welcome, (name)</h2>
+    <p>Username: (ID)</p><br>
 
     <!--Buttons to other pages-->
     <p style="text-align: center;">
