--- a/moneymanage.html
+++ b/moneymanage.html
@@ -109,14 +109,20 @@
     <button type="submit" class="button" style="margin-top: 50px; margin-left: 450px">Delete Current Bank Account</button> <br> <br> <br>
 
     <!--user can add a bank account-->
+    <form>
     <label> Add bank account: </label> <br>
-    <input type="text" name="bank_acc" placeholder="Enter number" required> 
+    <input type="text" name="bank_acc" 
+           pattern="[0-9]*" title="integers only"
+           placeholder="Enter number" required> 
     <button type="submit" class="button" style="margin-top: 10px; margin-left: 385px">Add New Bank Account</button> <br> <br> <br>
+    </form>
 
     <!--form to withdraw money from bank account-->
     <form style="margin-top: 50px" action="" id="accept">
         <label>Enter the amount of money to withdraw from your bank account:</label> <br>
-        <input type="text" name="withdraw_amt" placeholder="Enter amount" required> <br> <br>
+        <input type="text" name="withdraw_amt" 
+               pattern="[0-9]*" title="enter dollar value do not include '$' or cents"
+               placeholder="Enter amount" required> <br> <br>
 
         <p>Are you sure you would like to withdraw and send to your ChoreForce account?</p>
 
@@ -134,7 +140,9 @@
     <!--box to send money to bank account-->
     <form style="margin-top: 50px" action="" id="accept">
         <label>Enter the amount of money to send to your bank account:</label> <br>
-        <input type="text" name="send_amt" placeholder="Enter amount" required> <br> <br>
+        <input type="text" name="send_amt" 
+               pattern="[0-9]*" title="enter dollar value do not include '$' or cents"
+               placeholder="Enter amount" required> <br> <br>
 
         <p>Are you sure you would like to send money from your ChoreForce account to your bank account?</p>
 
