--- a/childportal.html
+++ b/childportal.html
@@ -37,9 +37,16 @@
         h2 {
             font-size: 32px;
             font-weight: bold;
-            margin-top: 100px;
+            margin-top: 50px;
             text-align: center;
             color: #003366;
+        }
+
+        p {
+            color: #4967ad;
+            font-size: 20px;
+            font-weight: bold;
+            text-align: center;
         }
 
         /*chorelist subheading style*/
@@ -47,7 +54,7 @@
             font-size: 24px;
             font-weight: bold;
             position: absolute;
-            top: 300px;
+            top: 450px;
             left: 100px;
             color: #4967ad;
         }
@@ -73,6 +80,7 @@
             width: 85%;
             margin-left: auto;
             margin-right: auto;
+            margin-bottom: 50px;
             border-radius: 5px;
             font-size: 24px;
         }
@@ -89,8 +97,9 @@
 		</div>
 	</nav>
 
-    <!--For phase 4 use php to add child name here-->
+    <!--For phase 4 use php to add child name and ID here-->
     <h2>Welcome, (name)</h2>
+    <p>Username: (ID)</p><br><br>
 
     <!--Buttons to other pages-->
     <p style="text-align: center;">
@@ -98,9 +107,9 @@
         <a class="button" href="moneymanage.html">Manage Payments</a>
 
     </p>
-    <h3 style="top: 220px;"> Total balance: </h3> <!--populate child's total balance from database and display next to this-->
+    <h3 style="top: 275px;"> Total balance: </h3> <!--populate child's total balance from database and display next to this-->
 
-    <h3>My Chores:</h3>
+    <h3>My Chores:</h3><br>
 
     <!--chorelist organized into a table. if we don't like, we can change-->
     <table>
