--- a/signup.html
+++ b/signup.html
@@ -116,7 +116,7 @@
     <div class="signup-box">
         <p>Create Account</p>
         <!--for phase 4, add link to php page below-->
-        <form action="">
+        <form action="signup.php" method="post">
 
 
             <label for="fname">First Name:</label>
@@ -130,6 +130,7 @@
                    placeholder="Enter last name" required>
 
             <label for="email">Email:</label>
+
             <input type="text" id="email" name="email" class="input-field"
                    pattern="[A-Za-z0-9]*@[A-Za-z]*[.][A-Za-z]{3}" title="email@website.domain"
                    placeholder="Enter email" required>
@@ -138,12 +139,36 @@
             <input type="text" id="password" name="password" class="input-field"
                    pattern="[A-Za-z0-9!_]*" title="Alphanumerics and/or ! _"
                    placeholder="Enter password" required>
-
+            <div id="account_created"></div>
             <button type="submit" class="signup-btn">Sign up</button>
 
             <p style="font-size:10px;top:10px;"><a href="signin.html">Already have an account? Login!</a></p>
 
         </form>
+
+        <!-- check if there is a message in the url (error or success sent from php) 
+             if so, show applicable message.-->
+        <script>
+	        const params = new URLSearchParams(window.location.search);
+
+	        if (params.has("error")) 
+            {
+		        const error = params.get("error");
+		        let message = "";
+
+		        if (error === "email_taken") 
+                {
+			        message = "the email you entered is taken.";
+		        }
+
+		        document.getElementById("email_taken").textContent = message;
+	        }
+            else if (params.has("success"))
+            {
+                // once account is created, automatically log into parent portal.
+                window.location.href = "parentportal.html";
+            }
+        </script>
     </div>
 
 </body>
